--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,44 @@ build/
 
 # External repositories
 CorePulse-LLM/
+
+# MLX/ML Model files
+*.ckpt
+*.safetensors
+*.bin
+*.pth
+weights/
+checkpoints/
+models/
+
+# Artifacts and test outputs - THE BIG PROBLEM
+artifacts/images/readme/*.png
+artifacts/images/test/
+artifacts/images/temp/
+*.log
+logs/
+
+# Keep only essential demo images
+!artifacts/images/essential/
+
+# Test outputs that shouldn't be committed
+test_*.png
+debug_*.png
+temp_*.png
+*_showcase.png
+*_SHOWCASE.png
+
+# Python test scripts (keep only final versions)
+test_*.py
+debug_*.py
+simple_*.py
+extreme_*.py
+comprehensive_*.py
+corepulse_showcase*.py
+semantic_*.py
+advanced_*.py
+final_*.py
+fixed_*.py
+working_*.py
+token_masking*.py
+full_*.py
